--- a/Game3Question/Game3Question.csproj
+++ b/Game3Question/Game3Question.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Question.cs" />
     <Compile Include="QuestionActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -101,6 +102,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SQLite.Net-PCL">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
   </ItemGroup>
   <ItemGroup>
